# spidoNG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: make-chart.py  make-iso-chart.py  run-all.sh  run-isolation.sh  spidong_bench.json  spidong_isolation.json  spidong_nocache_bench.json
benchmarks/competitors/actix/: Cargo.toml
benchmarks/competitors/actix-multi/: Cargo.toml
benchmarks/competitors/actix-multi/src/: main.rs
benchmarks/competitors/actix/src/: main.rs
benchmarks/competitors/express/: index.js  package.json
benchmarks/competitors/fastapi/: app.py
benchmarks/competitors/go-chi/: go.mod  main.go
benchmarks/competitors/postgrest/: postgrest.conf
docs/: CONFIG.md  PHASES.md
examples/: myservice.json
examples/ecommerce/: config.json
generator/: generator.py
generator/templates/: CMakeLists.txt.j2  auth_endpoints.cpp.j2  auth_endpoints.h.j2  files_endpoints.cpp.j2  files_endpoints.h.j2  handler.cpp.j2  handler.h.j2  main.cpp.j2  push_endpoints.cpp.j2  push_endpoints.h.j2  service_helpers.h.j2  service_setup.cpp.j2  service_setup.h.j2
spido/: CMakeLists.txt
spido-pg/: CMakeLists.txt
spido-pg/bench/: bench_db_write.sh  firmware.lua  schema.sql
spido-pg/benchmarks/: bench_burst.cpp
spido-pg/example/: main.cpp
spido-pg/include/spido_pg/: batch_writer.h  cache.h  connection.h  db.h  endpoint_registry.h  entity_cache.h  json.h  notify.h  pool.h  pressure_controller.h  query_helpers.h  string_map.h  token_bucket.h  wal.h
spido-pg/src/: batch_writer.cpp  cache.cpp  connection.cpp  db.cpp  endpoint_registry.cpp  entity_cache.cpp  md5.h  notify.cpp  pool.cpp  pressure_controller.cpp  scram.h  sha256.h  token_bucket.cpp  wal.cpp  wire.h
spido-pg/tests/: run_pg_smoke.sh  test_batch_writer.cpp  test_cache.cpp  test_connection.cpp  test_endpoint_registry.cpp  test_entity_cache.cpp  test_pool.cpp  test_pressure_controller.cpp  test_token_bucket.cpp  test_wal.cpp  test_wal_crash.cpp
spido/bench/: bench.sh
spido/examples/: spido.lua
spido/include/spido/: json.h  request.h  response.h  server.h
spido/src/: main.cpp
spido/src/memory/: pool_allocator.cpp  pool_allocator.h
spido/src/network/: umem.cpp  umem.h  xdp_engine.cpp  xdp_engine.h  xdp_loader.cpp  xdp_loader.h  xdp_program.cpp  xdp_program.h  xdp_socket.cpp  xdp_socket.h
spido/src/network/bpf/: spido_xdp.bpf.c
spido/src/server/: access_log.cpp  access_log.h  http_parser.cpp  http_parser.h  io_uring_server.cpp  io_uring_server.h  jwt.cpp  jwt.h  lua_config.cpp  lua_config.h  response.cpp  router.cpp  router.h  server.cpp  thread_pool.cpp  thread_pool.h  tls.cpp  tls.h
spido/src/utils/: cpu_affinity.cpp  cpu_affinity.h  ring_buffer.h
spido/tests/: test_parser.cpp
tests/: test_generator.py
