[package]
name = "actix_multi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web         = "=4.4.1"
tokio             = { version = "=1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-postgres    = "=0.7.10"
deadpool-postgres = "=0.12.1"
serde             = { version = "=1.0.197", features = ["derive"] }
serde_json        = "=1.0.114"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
