[package]
name = "actix_bench"
version = "0.1.0"
edition = "2021"

# Versions pinned to the toolchain that ships with Rust 1.75 — newer
# crates pull in `edition2024` features that require Rust ≥ 1.85.
[dependencies]
actix-web         = "=4.4.1"
tokio             = { version = "=1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-postgres    = "=0.7.10"
deadpool-postgres = "=0.12.1"
serde             = { version = "=1.0.197", features = ["derive"] }
serde_json        = "=1.0.114"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
